--- a/History.txt/blogpost.html
+++ b/History.txt/blogpost.html
@@ -15,8 +15,9 @@
             </div>              
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante del post</h1>
-                <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p>
-                <p>Los blog son la mejor forma de compartir informacion y tus ideas. Mucho más que ir a conferencias o salir en YouTube. Excepto si eres un rockstar. Pero estadisticamente no lo eres... por ahora.</p>
+                <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
+                <p><img src="imagenes/Grupo_Platzi.png" width="100%"/></p>
+                <p>Los blog son la mejor forma de compartir informacion y tus ideas. Mucho m&aacute;s que ir a conferencias o salir en YouTube. Excepto si eres un rockstar. Pero estadisticamente no lo eres... por ahora.</p>
                 <p>Visita nuestra pagina y suscribete en nuestro canal</p>
             </div>
             <div id="footer">
